# P3-Project

./: .gitignore  CMakeLists.txt  README.md  main.cpp  users.json
src/main/bst/: BST.h
src/main/csv/: Csv.cpp  Csv.h  DataFrame.cpp  DataFrame.h  Dictionary.h
src/main/data/: data.csv  data_1.csv
src/main/dataframe/: DataFrame.cpp  DataFrame.h
src/main/dictionary/: Dictionary.h
src/main/node/: TrieNode.h
src/main/register/: Register.h
src/main/searcher/: Searcher.cpp  Searcher.h
src/main/suggestion-system/: SuggestionSystem.cpp  SuggestionSystem.h
src/main/trie/: Trie.cpp  Trie.h
src/main/user/: User.h
